@@ -46,19 +46,26 @@ local function LocPanelTable()
 						type = 'range',
 						name = L["Width"],
 						min = 100, max = E.screenwidth/2, step = 1,
-						disabled = function() return not E.db.mui.locPanel.enable end,
+						disabled = function() return not E.db.mui.locPanel.enable or E.db.mui.locPanel.autowidth end,
+						set = function(info, value) E.db.mui.locPanel[ info[#info] ] = value; LP:Resize() end,
+					},
+					autowidth = {
+						order = 3,
+						type = "toggle",
+						name = L["Auto Width"],
+						desc = L["Change width based on the zone name length."],
 						set = function(info, value) E.db.mui.locPanel[ info[#info] ] = value; LP:Resize() end,
 					},
 					height = {
-						order = 3,
+						order = 4,
 						type = 'range',
 						name = L["Height"],
 						min = 10, max = 50, step = 1,
 						disabled = function() return not E.db.mui.locPanel.enable end,
-						set = function(info, value) E.db.mui.locPanel[ info[#info] ] = value; LP:Resize() end,
+						set = function(info, value) E.db.sle.minimap.locPanel[ info[#info] ] = value; LP:Resize() end,
 					},
 					template = {
-						order = 4,
+						order = 5,
 						name = L["Template"],
 						type = "select",
 						disabled = function() return not E.db.mui.locPanel.enable end,
@@ -69,7 +76,7 @@ local function LocPanelTable()
 						},
 					},
 					throttle = {
-						order = 5,
+						order = 6,
 						type = 'range',
 						name = L["Update Throttle"],
 						desc = L["The frequency of coordinates and zonetext updates. Check will be done more often with lower values."],
@@ -78,7 +85,7 @@ local function LocPanelTable()
 						set = function(info, value) E.db.mui.locPanel[ info[#info] ] = value; end,
 					},
 					format = {
-						order = 6,
+						order = 7,
 						name = L["Format"],
 						type = "select",
 						disabled = function() return not E.db.mui.locPanel.enable end,
@@ -90,14 +97,14 @@ local function LocPanelTable()
 						},
 					},
 					zoneText = {
+						order = 8,
 						type = "toggle",
 						name = L["Full Location"],
-						order = 7,
 						disabled = function() return not E.db.mui.locPanel.enable end,
 						set = function(info, value) E.db.mui.locPanel[ info[#info] ] = value; end,
 					},
 					colorType = {
-						order = 8,
+						order = 9,
 						name = L["Color Type"],
 						type = "select",
 						disabled = function() return not E.db.mui.locPanel.enable end,
@@ -110,7 +117,7 @@ local function LocPanelTable()
 					},
 					customColor = {
 						type = 'color',
-						order = 9,
+						order = 10,
 						name = L["Custom Color"],
 						disabled = function() return not E.db.mui.locPanel.enable or not E.db.mui.locPanel.colorType == "CUSTOM" end,
 						get = function(info)
@@ -125,15 +132,15 @@ local function LocPanelTable()
 						end,
 					},
 					linkcoords = {
+						order = 11,
 						type = "toggle",
 						name = L["Link Position"],
 						desc = L["Allow pasting of your coordinates in chat editbox via holding shift and clicking on the location name."],
-						order = 10,
 						disabled = function() return not E.db.mui.locPanel.enable end,
 						set = function(info, value) E.db.mui.locPanel[ info[#info] ] = value; end,
 					},
 					portals = {
-						order = 11,
+						order = 12,
 						type = "group",
 						name = L["Relocation Menu"],
 						guiInline = true,
@@ -182,7 +189,7 @@ local function LocPanelTable()
 						},
 					},
 					fontGroup = {
-						order = 12,
+						order = 13,
 						type = "group",
 						name = L["Fonts"],
 						guiInline = true,
